--- a/Examples/GroupDocs.Merger.Cloud.Examples.CSharp/GroupDocs.Merger.Cloud.Examples.CSharp.csproj
+++ b/Examples/GroupDocs.Merger.Cloud.Examples.CSharp/GroupDocs.Merger.Cloud.Examples.CSharp.csproj
@@ -58,6 +58,9 @@
     <Reference Include="GroupDocs.Merger.Cloud.Sdk, Version=19.10.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\GroupDocs.Merger-Cloud.19.10.0\lib\net20\GroupDocs.Merger.Cloud.Sdk.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -68,28 +71,42 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common.cs" />
-    <Compile Include="DocumentOperations\SplitDocument\SplitToMultiPageDocuments.cs" />
-    <Compile Include="DocumentOperations\SplitDocument\SplitToSinglePagesByRangeWithFilter.cs" />
-    <Compile Include="DocumentOperations\SplitDocument\SplitToSinglePagesByRange.cs" />
-    <Compile Include="GetSupportedFileTypes.cs" />
-    <Compile Include="PagesOperations\ExtractPages\ExtractPagesByNumbers.cs" />
-    <Compile Include="PagesOperations\ExtractPages\ExtractPagesByRange.cs" />
+    <Compile Include="DocumentOperations\SplitDocument\Merger_CSharp_SplitToMultiPageDocuments.cs" />
+    <Compile Include="DocumentOperations\SplitDocument\Merger_CSharp_SplitToSinglePagesByRangeWithFilter.cs" />
+    <Compile Include="DocumentOperations\SplitDocument\Merger_CSharp_SplitToSinglePagesByRange.cs" />
+    <Compile Include="Merger_CSharp_GetSupportedFileTypes.cs" />
+    <Compile Include="PagesOperations\ExtractPages\Merger_CSharp_ExtractPagesByNumbers.cs" />
+    <Compile Include="PagesOperations\ExtractPages\Merger_CSharp_ExtractPagesByRange.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunExamples.cs" />
-    <Compile Include="GetDocumentInformation.cs" />
-    <Compile Include="PagesOperations\ChangePageOrientation.cs" />
-    <Compile Include="PagesOperations\SwapPages.cs" />
-    <Compile Include="PagesOperations\RotatePages.cs" />
-    <Compile Include="PagesOperations\RemovePages.cs" />
-    <Compile Include="PagesOperations\MovePage.cs" />
-    <Compile Include="SecurityOperations\AddDocumentPassword.cs" />
-    <Compile Include="SecurityOperations\UpdateDocumentPassword.cs" />
-    <Compile Include="SecurityOperations\RemoveDocumentPassword.cs" />
-    <Compile Include="SecurityOperations\CheckDocumentPasswordProtection.cs" />
-    <Compile Include="DocumentOperations\JoinPagesFromVariousDocuments.cs" />
-    <Compile Include="DocumentOperations\JoinMultipleDocuments.cs" />
-    <Compile Include="DocumentOperations\PreviewDocument.cs" />
-    <Compile Include="DocumentOperations\SplitDocument\SplitToSinglePages.cs" />
+    <Compile Include="Merger_CSharp_GetDocumentInformation.cs" />
+    <Compile Include="PagesOperations\Merger_CSharp_ChangePageOrientation.cs" />
+    <Compile Include="PagesOperations\Merger_CSharp_SwapPages.cs" />
+    <Compile Include="PagesOperations\Merger_CSharp_RotatePages.cs" />
+    <Compile Include="PagesOperations\Merger_CSharp_RemovePages.cs" />
+    <Compile Include="PagesOperations\Merger_CSharp_MovePage.cs" />
+    <Compile Include="SecurityOperations\Merger_CSharp_AddDocumentPassword.cs" />
+    <Compile Include="SecurityOperations\Merger_CSharp_UpdateDocumentPassword.cs" />
+    <Compile Include="SecurityOperations\Merger_CSharp_RemoveDocumentPassword.cs" />
+    <Compile Include="SecurityOperations\Merger_CSharp_CheckDocumentPasswordProtection.cs" />
+    <Compile Include="DocumentOperations\Merger_CSharp_JoinPagesFromVariousDocuments.cs" />
+    <Compile Include="DocumentOperations\Merger_CSharp_JoinMultipleDocuments.cs" />
+    <Compile Include="DocumentOperations\Merger_CSharp_PreviewDocument.cs" />
+    <Compile Include="DocumentOperations\SplitDocument\Merger_CSharp_SplitToSinglePages.cs" />
+    <Compile Include="StorageOperations\Working_With_Files\Merger_CSharp_Copy_File.cs" />
+    <Compile Include="StorageOperations\Working_With_Files\Merger_CSharp_Delete_File.cs" />
+    <Compile Include="StorageOperations\Working_With_Files\Merger_CSharp_Download_File.cs" />
+    <Compile Include="StorageOperations\Working_With_Files\Merger_CSharp_Move_File.cs" />
+    <Compile Include="StorageOperations\Working_With_Files\Merger_CSharp_Upload_File.cs" />
+    <Compile Include="StorageOperations\Working_With_Folder\Merger_CSharp_Copy_Folder.cs" />
+    <Compile Include="StorageOperations\Working_With_Folder\Merger_CSharp_Create_Folder.cs" />
+    <Compile Include="StorageOperations\Working_With_Folder\Merger_CSharp_Delete_Folder.cs" />
+    <Compile Include="StorageOperations\Working_With_Folder\Merger_CSharp_Get_Files_List.cs" />
+    <Compile Include="StorageOperations\Working_With_Folder\Merger_CSharp_Move_Folder.cs" />
+    <Compile Include="StorageOperations\Working_With_Storage\Merger_CSharp_Get_Disc_Usage.cs" />
+    <Compile Include="StorageOperations\Working_With_Storage\Merger_CSharp_Get_File_Versions.cs" />
+    <Compile Include="StorageOperations\Working_With_Storage\Merger_CSharp_Object_Exists.cs" />
+    <Compile Include="StorageOperations\Working_With_Storage\Merger_CSharp_Storage_Exist.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -102,6 +119,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
   </Target>
