--- a/Examples/GroupDocs.Merger.Cloud.Examples.CSharp/GroupDocs.Merger.Cloud.Examples.CSharp.csproj
+++ b/Examples/GroupDocs.Merger.Cloud.Examples.CSharp/GroupDocs.Merger.Cloud.Examples.CSharp.csproj
@@ -1,108 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5057BAC4-1FAC-4107-8B71-0064D60A8431}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>GroupDocs.Merger.Cloud.Examples.CSharp</RootNamespace>
-    <AssemblyName>GroupDocs.Merger.Cloud.Examples.CSharp</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-    <PublishUrl>publish\</PublishUrl>
-    <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
-    <UpdateInterval>7</UpdateInterval>
-    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
-    <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
-    <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
-    <UseApplicationTrust>false</UseApplicationTrust>
-    <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject>GroupDocs.Merger.Cloud.Examples.CSharp.RunExamples</StartupObject>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="GroupDocs.Merger.Cloud.Sdk, Version=19.10.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\GroupDocs.Merger-Cloud.19.10.0\lib\net20\GroupDocs.Merger.Cloud.Sdk.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="GroupDocs.Merger-Cloud" Version="20.12.0" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Common.cs" />
-    <Compile Include="DocumentOperations\SplitDocument\SplitToMultiPageDocuments.cs" />
-    <Compile Include="DocumentOperations\SplitDocument\SplitToSinglePagesByRangeWithFilter.cs" />
-    <Compile Include="DocumentOperations\SplitDocument\SplitToSinglePagesByRange.cs" />
-    <Compile Include="GetSupportedFileTypes.cs" />
-    <Compile Include="PagesOperations\ExtractPages\ExtractPagesByNumbers.cs" />
-    <Compile Include="PagesOperations\ExtractPages\ExtractPagesByRange.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RunExamples.cs" />
-    <Compile Include="GetDocumentInformation.cs" />
-    <Compile Include="PagesOperations\ChangePageOrientation.cs" />
-    <Compile Include="PagesOperations\SwapPages.cs" />
-    <Compile Include="PagesOperations\RotatePages.cs" />
-    <Compile Include="PagesOperations\RemovePages.cs" />
-    <Compile Include="PagesOperations\MovePage.cs" />
-    <Compile Include="SecurityOperations\AddDocumentPassword.cs" />
-    <Compile Include="SecurityOperations\UpdateDocumentPassword.cs" />
-    <Compile Include="SecurityOperations\RemoveDocumentPassword.cs" />
-    <Compile Include="SecurityOperations\CheckDocumentPasswordProtection.cs" />
-    <Compile Include="DocumentOperations\JoinPagesFromVariousDocuments.cs" />
-    <Compile Include="DocumentOperations\JoinMultipleDocuments.cs" />
-    <Compile Include="DocumentOperations\PreviewDocument.cs" />
-    <Compile Include="DocumentOperations\SplitDocument\SplitToSinglePages.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-  </Target>
+
 </Project>
