Updating samples for v23.2

--- a/Examples/GroupDocs.Merger.Cloud.Examples.CSharp/GroupDocs.Merger.Cloud.Examples.CSharp.csproj
+++ b/Examples/GroupDocs.Merger.Cloud.Examples.CSharp/GroupDocs.Merger.Cloud.Examples.CSharp.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GroupDocs.Merger-Cloud" Version="22.5.0" />
+    <PackageReference Include="GroupDocs.Merger-Cloud" Version="23.2.0" />
   </ItemGroup>
 
 </Project>
